Alignemnt fix

--- a/_sass/_specials.scss
+++ b/_sass/_specials.scss
@@ -263,6 +263,18 @@ section.models
       .sp-content {
         padding: 30px;
 
+        .desp {
+          padding-bottom: 0;
+        }
+
+        .button-common {
+          margin-top: 30px;
+
+          &:last-child {
+            margin-top: 5px;
+          }
+        }
+
         strong {
           display: block;
           margin-bottom: 30px;
@@ -301,6 +313,11 @@ section.models
 
         .sp-content {
           direction: ltr !important;
+
+          .desp {
+            padding-bottom: 0;
+          }
+
         }
       }
     }
